# stm32f746ng-vscode-cmake-template

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  STM32F746NGHx_FLASH.ld
Core/Inc/: main.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h
Core/Src/: main.c  stm32f7xx_it.c
Core/Startup/: startup_stm32f746nghx.s
cmake/: toolchain-setting.cmake
